--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,24 @@
-.container {
+body {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  box-shadow: 5px 5px 5px 5px gray;
-  border-radius: 3%;
   max-width: 50%;
   min-width: 40%;
+  margin: auto;
+  height: 100vh;
+}
+
+.form {
+  box-shadow: 5px 5px 5px 5px gray;
+  border-radius: 3%;
+  height: 200px;
+  width: 190px;
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
 h1 {
@@ -15,14 +27,9 @@ h1 {
 
 .input {
   display: flex;
-  flex-direction: column;
-  gap: 25px;
+  justify-content: space-between;
 }
 
-form {
-  display: flex;
-  align-items: center;
-}
 button {
   background-color: teal;
   color: white;
@@ -30,4 +37,5 @@ button {
   height: 30px;
   align-items: center;
   justify-content: center;
+  border-radius: 4px;
 }
