--- a/styles.css
+++ b/styles.css
@@ -18,11 +18,22 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 3px;
+  background-color: green;
 }
 
 h1 {
   font-family: sans-serif;
+  line-height: 16px;
+}
+
+p {
+  font-size: 16px;
+  line-height: 17px;
+}
+
+.new {
+  font-size: 17px;
 }
 
 .input {
@@ -32,18 +43,17 @@ h1 {
   padding: 10px;
 }
 
-.text {
-  font-size: 17px;
-  margin-left: 6px;
+.forgot {
+  line-height: 15px;
 }
 
-.social {
-  display: flex;
-  align-items: space-around;
-  gap: 3em;
-  color: rgb(57, 29, 34);
+.remember {
+  font-size: 16px;
+  margin-left: 6px;
+  color: yellow;
 }
-.text label {
+
+.remember label {
   order: 1;
 }
 
@@ -60,4 +70,11 @@ button {
   padding-top: 3.5px;
   display: flex;
   align-items: center;
+}
+
+.social {
+  display: flex;
+  align-items: space-around;
+  gap: 3em;
+  color: rgb(57, 29, 34);
 }
