--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 body {
+  margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   max-width: 50%;
   min-width: 40%;
-  margin: auto;
   height: 100vh;
 }
 
@@ -27,9 +27,12 @@ h1 {
   line-height: 16px;
 }
 
-p {
+.form a {
   font-size: 16px;
-  line-height: 17px;
+  text-decoration: none;
+  color: black;
+  margin-top: 9px;
+  margin-bottom: 5px;
 }
 
 .new {
@@ -43,13 +46,14 @@ p {
   padding: 10px;
 }
 
-.forgot {
+forgot {
   line-height: 15px;
 }
 
 .remember {
   font-size: 16px;
   margin-left: 6px;
+  margin-bottom: 6px;
   color: yellow;
 }
 
@@ -59,6 +63,7 @@ p {
 
 .checkbox {
   display: flex;
+  gap: 10px;
 }
 
 button {
@@ -70,11 +75,15 @@ button {
   padding-top: 3.5px;
   display: flex;
   align-items: center;
+  margin-bottom: 18px;
 }
 
 .social {
   display: flex;
-  align-items: space-around;
+  align-items: space-between;
   gap: 3em;
   color: rgb(57, 29, 34);
 }
+
+
+
